[gd_scene load_steps=20 format=3 uid="uid://p8g3lkyeiuit"]

[ext_resource type="Script" uid="uid://uvftd1si3bek" path="res://scripts/enemy.gd" id="1_qi2p4"]
[ext_resource type="Texture2D" uid="uid://bb1w6a8rciqko" path="res://assets/villains/garbage/enemy_garbage.png" id="2_iifgy"]
[ext_resource type="FontFile" uid="uid://c4pe7v7qaoxgf" path="res://assets/fonts/Comfortaa-Bold.ttf" id="2_md484"]
[ext_resource type="PackedScene" uid="uid://ddh72aiq5vx3v" path="res://scenes/Bar.tscn" id="3_epg4t"]
[ext_resource type="Shader" uid="uid://bawe24n3kpfw7" path="res://enemy.gdshader" id="3_iifgy"]
[ext_resource type="AudioStream" uid="uid://2q8bt48w73ap" path="res://assets/sound_effects/monster_death.mp3" id="5_epg4t"]
[ext_resource type="AudioStream" uid="uid://b8q28jf45ioh" path="res://assets/sound_effects/hit_sound.mp3" id="6_3yqyl"]
[ext_resource type="PackedScene" uid="uid://ne1mtcf1gjyd" path="res://scenes/scene_transition_animation.tscn" id="7_nenq2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_md484"]
bg_color = Color(0.254902, 0.25098, 0.258824, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_epg4t"]
shader = ExtResource("3_iifgy")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="Animation" id="Animation_wujgv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_3yqyl"]
resource_name = "flash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hb8ge"]
_data = {
&"RESET": SubResource("Animation_wujgv"),
&"flash": SubResource("Animation_3yqyl")
}

[sub_resource type="Animation" id="Animation_epg4t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_iifgy"]
resource_name = "death"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_epg4t"]
_data = {
&"RESET": SubResource("Animation_epg4t"),
&"death": SubResource("Animation_iifgy")
}

[sub_resource type="Animation" id="Animation_e1ltt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_hb8ge"]
resource_name = "falling"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 2300)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dxifv"]
_data = {
&"RESET": SubResource("Animation_e1ltt"),
&"falling": SubResource("Animation_hb8ge")
}

[node name="Enemy1_lausanne" type="MarginContainer"]
offset_right = 933.0
offset_bottom = 611.0
script = ExtResource("1_qi2p4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_md484")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_md484")
text = "DÃ©cheto"

[node name="Bar" parent="VBoxContainer" instance=ExtResource("3_epg4t")]
layout_mode = 2
size_flags_vertical = 8

[node name="Image_Container" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2

[node name="Image" type="Sprite2D" parent="VBoxContainer/Image_Container"]
material = SubResource("ShaderMaterial_epg4t")
texture = ExtResource("2_iifgy")
centered = false

[node name="Flash_animation" type="AnimationPlayer" parent="VBoxContainer/Image_Container/Image"]
libraries = {
&"": SubResource("AnimationLibrary_hb8ge")
}

[node name="Death_flash" type="AnimationPlayer" parent="VBoxContainer/Image_Container/Image"]
libraries = {
&"": SubResource("AnimationLibrary_epg4t")
}
speed_scale = 2.0

[node name="Falling" type="AnimationPlayer" parent="VBoxContainer/Image_Container/Image"]
libraries = {
&"": SubResource("AnimationLibrary_dxifv")
}

[node name="Monster_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_epg4t")

[node name="Hit_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3yqyl")

[node name="Scene_transition_animation" parent="." instance=ExtResource("7_nenq2")]
